test/testdata/classes/methods/init/missing_3_args_error.lox
class Foo {
  init(a, b, c) {
    print a + b + c;
  }
}

Foo(); // error: Foo.init() accepts 3 arguments but 0 were given
